[package]
name = "cargo-patch"
version = "0.1.7"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"
description = "Cargo Subcommand for patching dependencies using patch files"
license-file = "LICENSE"
repository = "https://github.com/mettke/cargo-patch"
readme = "README.md"
keywords = ["cargo", "patch", "dependency", "dependencies", "patchfile"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.38"
cargo = "0.50.1"
failure = "0.1.8"
fs_extra = "1.2.0"
patch = "0.5.0"
semver = "0.10.0"
toml = "0.5.8"

[dev-dependencies]
cargo-test-macro = { git = "https://github.com/rust-lang/cargo.git", version = "0.1.0", tag = "0.44.1" }
cargo-test-support = { git = "https://github.com/rust-lang/cargo.git", version = "0.1.0", tag = "0.44.1" }
